--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,13 @@ repositories {
 }
 
 dependencies {
-    implementation("org.springframework.boot:spring-boot-starter-actuator")
+     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-web")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     runtimeOnly("com.h2database:h2")
+    implementation 'com.mysql:mysql-connector-j'
 }
 
 test {
