--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
     "java.compile.nullAnalysis.mode": "automatic",
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "cSpell.words": [
+        "Addpet",
+        "infoentry",
+        "savepet",
+        "thirstlevel",
+        "traininglevel",
+        "trainlevel"
+    ]
 }
