--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,12 @@
     "java.configuration.updateBuildConfiguration": "interactive",
     "cSpell.words": [
         "Addpet",
+        "blahblah",
         "infoentry",
+        "Mackeon",
+        "Mckeon",
         "savepet",
+        "Siman",
         "thirstlevel",
         "traininglevel",
         "trainlevel"
