--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "infoentry",
         "Mackeon",
         "Mckeon",
+        "mountpoint",
         "savepet",
         "Siman",
         "thirstlevel",
